Fix header z-index

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -13,6 +13,7 @@
   font-size: 1.8rem;
   position: absolute;
   top: 0;
+  z-index: 9999999;
 }
 
 .Header-logo {
